--- a/styles.css
+++ b/styles.css
@@ -226,8 +226,8 @@ footer {
 	list-style-type: none;
 	line-height: 100px;
   	font-size: max(40px, 8vw);
-  	text-align:center;
-	padding-left:0
+  	text-align: center;
+	padding-left: 0;
 }
 
 
